--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,17 @@ body {
   color: white;
   text-decoration: none;
 }
+ .img-section {
+      max-width: 100%;
+      border-radius: 12px;
+      margin-top: 1rem;
+    }
+    .grid.two img, .grid.three img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
 
 .menu {
   list-style: none;
