--- a/agroia.css
+++ b/agroia.css
@@ -15,6 +15,10 @@ header {
   text-align: center;
   margin-bottom: 20px;
 }
+.nav i{
+  color: #2bd673;
+  text-decoration: none;
+}
 
 header img {
   max-width: 100%;   
@@ -82,7 +86,7 @@ footer {
 
 footer a {
   color: #2bd673;
-  text-decoration: none;
+  text-decoration: non;
 }
 
 /* ---------------- Responsive ---------------- */
@@ -173,7 +177,7 @@ footer a {
 
     nav ul li a:hover {
       color: #2bd673;
-      text-decoration: underline;
+      text-decoration: none;
     }
 
     /* Responsive menu (mobile) */
