--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
   color: #ffffff;
   background-color: #0a1f14;
 }
+h2, h3, h4 {
+  color: #2bd673;
+  margin-top: 0;
+}
 
 .container {
   width: 90%;
@@ -19,6 +23,16 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap; /* pour éviter le débordement */
+  padding: 10px 0;
+  border-bottom: 2px solid #2bd673;
+}
+.nav i{
+  height: 40px;
+   color: #2bd673
+}
+.nav a{
+  color: #2bd673;
+  text-decoration: none;
 }
 
 .logo {
@@ -71,7 +85,8 @@ body {
 }
 
 .menu a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  color: #2bd673;
 }
 
 .hero {
@@ -82,6 +97,7 @@ body {
 .hero h1 {
   font-size: 28px;
   margin-bottom: 10px;
+  color: #2bd673;
 }
 
 .hero p {
