--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ nav {
 
 /* === Modal === */
 .modal {
+  margin-top: 50px;
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
